[4200] Add table representation in the view DSL
Bug: https://github.com/eclipse-sirius/sirius-web/issues/4200
Signed-off-by: Florian ROUËNÉ <florian.rouene@obeosoft.com>